# game2048

./: .gitignore  CMakeLists.txt
src/: main.cpp  main.h
